添加打印任务，使用内存块链表和内存池实现

--- a/AZRTOS_ThreadX.ioc
+++ b/AZRTOS_ThreadX.ioc
@@ -1,12 +1,13 @@
 #MicroXplorer Configuration settings - do not modify
 File.Version=6
-GPIO.groupedBy=
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IPNb=3
+Mcu.IP3=USART1
+Mcu.IPNb=4
 Mcu.Name=STM32F429B(E-G-I)Tx
 Mcu.Package=LQFP208
 Mcu.Pin0=PC14/OSC32_IN
@@ -15,9 +16,11 @@ Mcu.Pin2=PH0/OSC_IN
 Mcu.Pin3=PH1/OSC_OUT
 Mcu.Pin4=PD12
 Mcu.Pin5=PG7
-Mcu.Pin6=VP_SYS_VS_Systick
-Mcu.Pin7=VP_STMicroelectronics.X-CUBE-AZRTOS-F4_VS_RTOSJjThreadX_6.1.7_1.0.0
-Mcu.PinsNb=8
+Mcu.Pin6=PA9
+Mcu.Pin7=PA10
+Mcu.Pin8=VP_SYS_VS_tim1
+Mcu.Pin9=VP_STMicroelectronics.X-CUBE-AZRTOS-F4_VS_RTOSJjThreadX_6.1.7_1.0.0
+Mcu.PinsNb=10
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-AZRTOS-F4.1.0.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -37,7 +40,15 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:true
+NVIC.TIM1_UP_TIM10_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true
+NVIC.TimeBase=TIM1_UP_TIM10_IRQn
+NVIC.TimeBaseIP=TIM1
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
 PC14/OSC32_IN.Mode=LSE-External-Oscillator
 PC14/OSC32_IN.Signal=RCC_OSC32_IN
 PC15/OSC32_OUT.Mode=LSE-External-Oscillator
@@ -124,8 +135,11 @@ STMicroelectronics.X-CUBE-AZRTOS-F4.1.0.0.RTOSJjThreadX_Checked=true
 STMicroelectronics.X-CUBE-AZRTOS-F4.1.0.0.ThreadXCcRTOSJjThreadXJjCore=true
 STMicroelectronics.X-CUBE-AZRTOS-F4.1.0.0_IsAnAzureRtosMw=true
 STMicroelectronics.X-CUBE-AZRTOS-F4.1.0.0_SwParameter=ThreadXCcRTOSJjThreadXJjCore\:true;
+USART1.IPParameters=VirtualMode,OverSampling
+USART1.OverSampling=UART_OVERSAMPLING_8
+USART1.VirtualMode=VM_ASYNC
 VP_STMicroelectronics.X-CUBE-AZRTOS-F4_VS_RTOSJjThreadX_6.1.7_1.0.0.Mode=RTOSJjThreadX
 VP_STMicroelectronics.X-CUBE-AZRTOS-F4_VS_RTOSJjThreadX_6.1.7_1.0.0.Signal=STMicroelectronics.X-CUBE-AZRTOS-F4_VS_RTOSJjThreadX_6.1.7_1.0.0
-VP_SYS_VS_Systick.Mode=SysTick
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_SYS_VS_tim1.Mode=TIM1
+VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 board=custom
