--- a/AZRTOS_ThreadX.ioc
+++ b/AZRTOS_ThreadX.ioc
@@ -1,26 +1,100 @@
 #MicroXplorer Configuration settings - do not modify
+FMC.CASLatency2=FMC_SDRAM_CAS_LATENCY_3
+FMC.ExitSelfRefreshDelay2=7
+FMC.IPParameters=SDClockPeriod2,SDClockPeriod1,CASLatency2,ReadBurst2,ReadBurst1,ReadPipeDelay2,ReadPipeDelay1,LoadToActiveDelay2,ExitSelfRefreshDelay2,SelfRefreshTime2,RowCycleDelay2,RowCycleDelay1,WriteRecoveryTime2,RPDelay2,RPDelay1,RCDDelay2
+FMC.LoadToActiveDelay2=2
+FMC.RCDDelay2=2
+FMC.RPDelay1=2
+FMC.RPDelay2=2
+FMC.ReadBurst1=FMC_SDRAM_RBURST_ENABLE
+FMC.ReadBurst2=FMC_SDRAM_RBURST_ENABLE
+FMC.ReadPipeDelay1=FMC_SDRAM_RPIPE_DELAY_1
+FMC.ReadPipeDelay2=FMC_SDRAM_RPIPE_DELAY_1
+FMC.RowCycleDelay1=6
+FMC.RowCycleDelay2=6
+FMC.SDClockPeriod1=FMC_SDRAM_CLOCK_PERIOD_2
+FMC.SDClockPeriod2=FMC_SDRAM_CLOCK_PERIOD_2
+FMC.SelfRefreshTime2=4
+FMC.WriteRecoveryTime2=2
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F4
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=USART1
-Mcu.IPNb=4
+Mcu.IP0=FMC
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=USART1
+Mcu.IPNb=5
 Mcu.Name=STM32F429B(E-G-I)Tx
 Mcu.Package=LQFP208
 Mcu.Pin0=PC14/OSC32_IN
 Mcu.Pin1=PC15/OSC32_OUT
-Mcu.Pin2=PH0/OSC_IN
-Mcu.Pin3=PH1/OSC_OUT
-Mcu.Pin4=PD12
-Mcu.Pin5=PG7
-Mcu.Pin6=PA9
-Mcu.Pin7=PA10
-Mcu.Pin8=VP_SYS_VS_tim1
-Mcu.Pin9=VP_STMicroelectronics.X-CUBE-AZRTOS-F4_VS_RTOSJjThreadX_6.1.7_1.0.0
-Mcu.PinsNb=10
+Mcu.Pin10=PH0/OSC_IN
+Mcu.Pin11=PH1/OSC_OUT
+Mcu.Pin12=PC0
+Mcu.Pin13=PF11
+Mcu.Pin14=PF12
+Mcu.Pin15=PF13
+Mcu.Pin16=PF14
+Mcu.Pin17=PF15
+Mcu.Pin18=PG0
+Mcu.Pin19=PG1
+Mcu.Pin2=PI9
+Mcu.Pin20=PE7
+Mcu.Pin21=PE8
+Mcu.Pin22=PE9
+Mcu.Pin23=PE10
+Mcu.Pin24=PE11
+Mcu.Pin25=PE12
+Mcu.Pin26=PE13
+Mcu.Pin27=PE14
+Mcu.Pin28=PE15
+Mcu.Pin29=PH6
+Mcu.Pin3=PI10
+Mcu.Pin30=PH7
+Mcu.Pin31=PH8
+Mcu.Pin32=PH9
+Mcu.Pin33=PH10
+Mcu.Pin34=PH11
+Mcu.Pin35=PH12
+Mcu.Pin36=PD8
+Mcu.Pin37=PD9
+Mcu.Pin38=PD10
+Mcu.Pin39=PD12
+Mcu.Pin4=PF0
+Mcu.Pin40=PD14
+Mcu.Pin41=PD15
+Mcu.Pin42=PG4
+Mcu.Pin43=PG5
+Mcu.Pin44=PG7
+Mcu.Pin45=PG8
+Mcu.Pin46=PA9
+Mcu.Pin47=PA10
+Mcu.Pin48=PH13
+Mcu.Pin49=PH14
+Mcu.Pin5=PF1
+Mcu.Pin50=PH15
+Mcu.Pin51=PI0
+Mcu.Pin52=PI1
+Mcu.Pin53=PI2
+Mcu.Pin54=PI3
+Mcu.Pin55=PD0
+Mcu.Pin56=PD1
+Mcu.Pin57=PG15
+Mcu.Pin58=PE0
+Mcu.Pin59=PE1
+Mcu.Pin6=PF2
+Mcu.Pin60=PI4
+Mcu.Pin61=PI5
+Mcu.Pin62=PI6
+Mcu.Pin63=PI7
+Mcu.Pin64=VP_SYS_VS_tim1
+Mcu.Pin65=VP_STMicroelectronics.X-CUBE-AZRTOS-F4_VS_RTOSJjThreadX_6.1.7_1.0.0
+Mcu.Pin7=PF3
+Mcu.Pin8=PF4
+Mcu.Pin9=PF5
+Mcu.PinsNb=66
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-AZRTOS-F4.1.0.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -49,18 +123,76 @@ PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PC0.Signal=FMC_SDNWE
 PC14/OSC32_IN.Mode=LSE-External-Oscillator
 PC14/OSC32_IN.Signal=RCC_OSC32_IN
 PC15/OSC32_OUT.Mode=LSE-External-Oscillator
 PC15/OSC32_OUT.Signal=RCC_OSC32_OUT
+PD0.Signal=FMC_D2_DA2
+PD1.Signal=FMC_D3_DA3
+PD10.Signal=FMC_D15_DA15
 PD12.Locked=true
 PD12.Signal=GPIO_Output
+PD14.Signal=FMC_D0_DA0
+PD15.Signal=FMC_D1_DA1
+PD8.Signal=FMC_D13_DA13
+PD9.Signal=FMC_D14_DA14
+PE0.Signal=FMC_NBL0
+PE1.Signal=FMC_NBL1
+PE10.Signal=FMC_D7_DA7
+PE11.Signal=FMC_D8_DA8
+PE12.Signal=FMC_D9_DA9
+PE13.Signal=FMC_D10_DA10
+PE14.Signal=FMC_D11_DA11
+PE15.Signal=FMC_D12_DA12
+PE7.Signal=FMC_D4_DA4
+PE8.Signal=FMC_D5_DA5
+PE9.Signal=FMC_D6_DA6
+PF0.Signal=FMC_A0
+PF1.Signal=FMC_A1
+PF11.Signal=FMC_SDNRAS
+PF12.Signal=FMC_A6
+PF13.Signal=FMC_A7
+PF14.Signal=FMC_A8
+PF15.Signal=FMC_A9
+PF2.Signal=FMC_A2
+PF3.Signal=FMC_A3
+PF4.Signal=FMC_A4
+PF5.Signal=FMC_A5
+PG0.Signal=FMC_A10
+PG1.Signal=FMC_A11
+PG15.Signal=FMC_SDNCAS
+PG4.Signal=FMC_A14_BA0
+PG5.Signal=FMC_A15_BA1
 PG7.Locked=true
 PG7.Signal=GPIO_Output
+PG8.Signal=FMC_SDCLK
 PH0/OSC_IN.Mode=HSE-External-Oscillator
 PH0/OSC_IN.Signal=RCC_OSC_IN
 PH1/OSC_OUT.Mode=HSE-External-Oscillator
 PH1/OSC_OUT.Signal=RCC_OSC_OUT
+PH10.Signal=FMC_D18
+PH11.Signal=FMC_D19
+PH12.Signal=FMC_D20
+PH13.Signal=FMC_D21
+PH14.Signal=FMC_D22
+PH15.Signal=FMC_D23
+PH6.Mode=SdramChipSelect2_2
+PH6.Signal=FMC_SDNE1
+PH7.Mode=SdramChipSelect2_2
+PH7.Signal=FMC_SDCKE1
+PH8.Signal=FMC_D16
+PH9.Signal=FMC_D17
+PI0.Signal=FMC_D24
+PI1.Signal=FMC_D25
+PI10.Signal=FMC_D31
+PI2.Signal=FMC_D26
+PI3.Signal=FMC_D27
+PI4.Signal=FMC_NBL2
+PI5.Signal=FMC_NBL3
+PI6.Signal=FMC_D28
+PI7.Signal=FMC_D29
+PI9.Signal=FMC_D30
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -89,7 +221,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5.32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.48MHZClocksFreq_Value=90000000
 RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -129,6 +261,114 @@ RCC.VCOSAIOutputFreq_ValueQ=20416666.666666668
 RCC.VCOSAIOutputFreq_ValueR=40833333.333333336
 RCC.VcooutputI2S=160000000
 RCC.VcooutputI2SQ=160000000
+SH.FMC_A0.0=FMC_A0,12b-sda2
+SH.FMC_A0.ConfNb=1
+SH.FMC_A1.0=FMC_A1,12b-sda2
+SH.FMC_A1.ConfNb=1
+SH.FMC_A10.0=FMC_A10,12b-sda2
+SH.FMC_A10.ConfNb=1
+SH.FMC_A11.0=FMC_A11,12b-sda2
+SH.FMC_A11.ConfNb=1
+SH.FMC_A14_BA0.0=FMC_BA0,FourSdramBanks2
+SH.FMC_A14_BA0.ConfNb=1
+SH.FMC_A15_BA1.0=FMC_BA1,FourSdramBanks2
+SH.FMC_A15_BA1.ConfNb=1
+SH.FMC_A2.0=FMC_A2,12b-sda2
+SH.FMC_A2.ConfNb=1
+SH.FMC_A3.0=FMC_A3,12b-sda2
+SH.FMC_A3.ConfNb=1
+SH.FMC_A4.0=FMC_A4,12b-sda2
+SH.FMC_A4.ConfNb=1
+SH.FMC_A5.0=FMC_A5,12b-sda2
+SH.FMC_A5.ConfNb=1
+SH.FMC_A6.0=FMC_A6,12b-sda2
+SH.FMC_A6.ConfNb=1
+SH.FMC_A7.0=FMC_A7,12b-sda2
+SH.FMC_A7.ConfNb=1
+SH.FMC_A8.0=FMC_A8,12b-sda2
+SH.FMC_A8.ConfNb=1
+SH.FMC_A9.0=FMC_A9,12b-sda2
+SH.FMC_A9.ConfNb=1
+SH.FMC_D0_DA0.0=FMC_D0,sd-32b-d2
+SH.FMC_D0_DA0.ConfNb=1
+SH.FMC_D10_DA10.0=FMC_D10,sd-32b-d2
+SH.FMC_D10_DA10.ConfNb=1
+SH.FMC_D11_DA11.0=FMC_D11,sd-32b-d2
+SH.FMC_D11_DA11.ConfNb=1
+SH.FMC_D12_DA12.0=FMC_D12,sd-32b-d2
+SH.FMC_D12_DA12.ConfNb=1
+SH.FMC_D13_DA13.0=FMC_D13,sd-32b-d2
+SH.FMC_D13_DA13.ConfNb=1
+SH.FMC_D14_DA14.0=FMC_D14,sd-32b-d2
+SH.FMC_D14_DA14.ConfNb=1
+SH.FMC_D15_DA15.0=FMC_D15,sd-32b-d2
+SH.FMC_D15_DA15.ConfNb=1
+SH.FMC_D16.0=FMC_D16,sd-32b-d2
+SH.FMC_D16.ConfNb=1
+SH.FMC_D17.0=FMC_D17,sd-32b-d2
+SH.FMC_D17.ConfNb=1
+SH.FMC_D18.0=FMC_D18,sd-32b-d2
+SH.FMC_D18.ConfNb=1
+SH.FMC_D19.0=FMC_D19,sd-32b-d2
+SH.FMC_D19.ConfNb=1
+SH.FMC_D1_DA1.0=FMC_D1,sd-32b-d2
+SH.FMC_D1_DA1.ConfNb=1
+SH.FMC_D20.0=FMC_D20,sd-32b-d2
+SH.FMC_D20.ConfNb=1
+SH.FMC_D21.0=FMC_D21,sd-32b-d2
+SH.FMC_D21.ConfNb=1
+SH.FMC_D22.0=FMC_D22,sd-32b-d2
+SH.FMC_D22.ConfNb=1
+SH.FMC_D23.0=FMC_D23,sd-32b-d2
+SH.FMC_D23.ConfNb=1
+SH.FMC_D24.0=FMC_D24,sd-32b-d2
+SH.FMC_D24.ConfNb=1
+SH.FMC_D25.0=FMC_D25,sd-32b-d2
+SH.FMC_D25.ConfNb=1
+SH.FMC_D26.0=FMC_D26,sd-32b-d2
+SH.FMC_D26.ConfNb=1
+SH.FMC_D27.0=FMC_D27,sd-32b-d2
+SH.FMC_D27.ConfNb=1
+SH.FMC_D28.0=FMC_D28,sd-32b-d2
+SH.FMC_D28.ConfNb=1
+SH.FMC_D29.0=FMC_D29,sd-32b-d2
+SH.FMC_D29.ConfNb=1
+SH.FMC_D2_DA2.0=FMC_D2,sd-32b-d2
+SH.FMC_D2_DA2.ConfNb=1
+SH.FMC_D30.0=FMC_D30,sd-32b-d2
+SH.FMC_D30.ConfNb=1
+SH.FMC_D31.0=FMC_D31,sd-32b-d2
+SH.FMC_D31.ConfNb=1
+SH.FMC_D3_DA3.0=FMC_D3,sd-32b-d2
+SH.FMC_D3_DA3.ConfNb=1
+SH.FMC_D4_DA4.0=FMC_D4,sd-32b-d2
+SH.FMC_D4_DA4.ConfNb=1
+SH.FMC_D5_DA5.0=FMC_D5,sd-32b-d2
+SH.FMC_D5_DA5.ConfNb=1
+SH.FMC_D6_DA6.0=FMC_D6,sd-32b-d2
+SH.FMC_D6_DA6.ConfNb=1
+SH.FMC_D7_DA7.0=FMC_D7,sd-32b-d2
+SH.FMC_D7_DA7.ConfNb=1
+SH.FMC_D8_DA8.0=FMC_D8,sd-32b-d2
+SH.FMC_D8_DA8.ConfNb=1
+SH.FMC_D9_DA9.0=FMC_D9,sd-32b-d2
+SH.FMC_D9_DA9.ConfNb=1
+SH.FMC_NBL0.0=FMC_NBL0,Sd4ByteEnable2
+SH.FMC_NBL0.ConfNb=1
+SH.FMC_NBL1.0=FMC_NBL1,Sd4ByteEnable2
+SH.FMC_NBL1.ConfNb=1
+SH.FMC_NBL2.0=FMC_NBL2,Sd4ByteEnable2
+SH.FMC_NBL2.ConfNb=1
+SH.FMC_NBL3.0=FMC_NBL3,Sd4ByteEnable2
+SH.FMC_NBL3.ConfNb=1
+SH.FMC_SDCLK.0=FMC_SDCLK,12b-sda2
+SH.FMC_SDCLK.ConfNb=1
+SH.FMC_SDNCAS.0=FMC_SDNCAS,12b-sda2
+SH.FMC_SDNCAS.ConfNb=1
+SH.FMC_SDNRAS.0=FMC_SDNRAS,12b-sda2
+SH.FMC_SDNRAS.ConfNb=1
+SH.FMC_SDNWE.0=FMC_SDNWE,12b-sda2
+SH.FMC_SDNWE.ConfNb=1
 STMicroelectronics.X-CUBE-AZRTOS-F4.1.0.0.AZRTOS_APP_MEM_ALLOCATION_METHOD=0
 STMicroelectronics.X-CUBE-AZRTOS-F4.1.0.0.IPParameters=AZRTOS_APP_MEM_ALLOCATION_METHOD,ThreadXCcRTOSJjThreadXJjCore
 STMicroelectronics.X-CUBE-AZRTOS-F4.1.0.0.RTOSJjThreadX_Checked=true
