--- a/AZRTOS_ThreadX.ioc
+++ b/AZRTOS_ThreadX.ioc
@@ -19,82 +19,131 @@ FMC.WriteRecoveryTime2=2
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
+LTDC.ActiveH=272
+LTDC.ActiveW=480
+LTDC.Alpha0_L0=0
+LTDC.Alpha_L0=255
+LTDC.BlendingFactor1_L0=LTDC_BLENDING_FACTOR1_PAxCA
+LTDC.BlendingFactor2_L0=LTDC_BLENDING_FACTOR2_PAxCA
+LTDC.FBStartAdress_L0=0xD0000000
+LTDC.Green=0
+LTDC.Green_L0=0
+LTDC.HBP=2
+LTDC.HFP=2
+LTDC.HSync=41
+LTDC.IPParameters=HSync,HBP,HFP,ActiveW,VSync,ActiveH,Layers,WindowX1_L0,WindowY1_L0,FBStartAdress_L0,ImageWidth_L0,ImageHeight_L0,Alpha0_L0,BlendingFactor1_L0,Green,Green_L0,BlendingFactor2_L0,Alpha_L0
+LTDC.ImageHeight_L0=272
+LTDC.ImageWidth_L0=480
+LTDC.Layers=0
+LTDC.VSync=10
+LTDC.WindowX1_L0=480
+LTDC.WindowY1_L0=272
 Mcu.Family=STM32F4
 Mcu.IP0=FMC
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=USART1
-Mcu.IPNb=5
+Mcu.IP1=LTDC
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=USART1
+Mcu.IPNb=6
 Mcu.Name=STM32F429B(E-G-I)Tx
 Mcu.Package=LQFP208
 Mcu.Pin0=PC14/OSC32_IN
 Mcu.Pin1=PC15/OSC32_OUT
-Mcu.Pin10=PH0/OSC_IN
-Mcu.Pin11=PH1/OSC_OUT
-Mcu.Pin12=PC0
-Mcu.Pin13=PF11
-Mcu.Pin14=PF12
-Mcu.Pin15=PF13
-Mcu.Pin16=PF14
-Mcu.Pin17=PF15
-Mcu.Pin18=PG0
-Mcu.Pin19=PG1
+Mcu.Pin10=PF3
+Mcu.Pin11=PF4
+Mcu.Pin12=PF5
+Mcu.Pin13=PH0/OSC_IN
+Mcu.Pin14=PH1/OSC_OUT
+Mcu.Pin15=PC0
+Mcu.Pin16=PI15
+Mcu.Pin17=PJ0
+Mcu.Pin18=PJ1
+Mcu.Pin19=PJ2
 Mcu.Pin2=PI9
-Mcu.Pin20=PE7
-Mcu.Pin21=PE8
-Mcu.Pin22=PE9
-Mcu.Pin23=PE10
-Mcu.Pin24=PE11
-Mcu.Pin25=PE12
-Mcu.Pin26=PE13
-Mcu.Pin27=PE14
-Mcu.Pin28=PE15
-Mcu.Pin29=PH6
+Mcu.Pin20=PJ3
+Mcu.Pin21=PJ4
+Mcu.Pin22=PF11
+Mcu.Pin23=PF12
+Mcu.Pin24=PF13
+Mcu.Pin25=PF14
+Mcu.Pin26=PF15
+Mcu.Pin27=PG0
+Mcu.Pin28=PG1
+Mcu.Pin29=PE7
 Mcu.Pin3=PI10
-Mcu.Pin30=PH7
-Mcu.Pin31=PH8
-Mcu.Pin32=PH9
-Mcu.Pin33=PH10
-Mcu.Pin34=PH11
-Mcu.Pin35=PH12
-Mcu.Pin36=PD8
-Mcu.Pin37=PD9
-Mcu.Pin38=PD10
-Mcu.Pin39=PD12
+Mcu.Pin30=PE8
+Mcu.Pin31=PE9
+Mcu.Pin32=PE10
+Mcu.Pin33=PE11
+Mcu.Pin34=PE12
+Mcu.Pin35=PE13
+Mcu.Pin36=PE14
+Mcu.Pin37=PE15
+Mcu.Pin38=PJ5
+Mcu.Pin39=PH6
 Mcu.Pin4=PF0
-Mcu.Pin40=PD14
-Mcu.Pin41=PD15
-Mcu.Pin42=PG4
-Mcu.Pin43=PG5
-Mcu.Pin44=PG7
-Mcu.Pin45=PG8
-Mcu.Pin46=PA9
-Mcu.Pin47=PA10
-Mcu.Pin48=PH13
-Mcu.Pin49=PH14
+Mcu.Pin40=PH7
+Mcu.Pin41=PH8
+Mcu.Pin42=PH9
+Mcu.Pin43=PH10
+Mcu.Pin44=PH11
+Mcu.Pin45=PH12
+Mcu.Pin46=PD8
+Mcu.Pin47=PD9
+Mcu.Pin48=PD10
+Mcu.Pin49=PD12
 Mcu.Pin5=PF1
-Mcu.Pin50=PH15
-Mcu.Pin51=PI0
-Mcu.Pin52=PI1
-Mcu.Pin53=PI2
-Mcu.Pin54=PI3
-Mcu.Pin55=PD0
-Mcu.Pin56=PD1
-Mcu.Pin57=PG15
-Mcu.Pin58=PE0
-Mcu.Pin59=PE1
+Mcu.Pin50=PD13
+Mcu.Pin51=PD14
+Mcu.Pin52=PD15
+Mcu.Pin53=PJ6
+Mcu.Pin54=PJ7
+Mcu.Pin55=PJ8
+Mcu.Pin56=PJ9
+Mcu.Pin57=PJ10
+Mcu.Pin58=PJ11
+Mcu.Pin59=PK0
 Mcu.Pin6=PF2
-Mcu.Pin60=PI4
-Mcu.Pin61=PI5
-Mcu.Pin62=PI6
-Mcu.Pin63=PI7
-Mcu.Pin64=VP_SYS_VS_tim1
-Mcu.Pin65=VP_STMicroelectronics.X-CUBE-AZRTOS-F4_VS_RTOSJjThreadX_6.1.7_1.0.0
-Mcu.Pin7=PF3
-Mcu.Pin8=PF4
-Mcu.Pin9=PF5
-Mcu.PinsNb=66
+Mcu.Pin60=PK1
+Mcu.Pin61=PK2
+Mcu.Pin62=PG4
+Mcu.Pin63=PG5
+Mcu.Pin64=PG7
+Mcu.Pin65=PG8
+Mcu.Pin66=PA9
+Mcu.Pin67=PA10
+Mcu.Pin68=PH13
+Mcu.Pin69=PH14
+Mcu.Pin7=PI12
+Mcu.Pin70=PH15
+Mcu.Pin71=PI0
+Mcu.Pin72=PI1
+Mcu.Pin73=PI2
+Mcu.Pin74=PI3
+Mcu.Pin75=PD0
+Mcu.Pin76=PD1
+Mcu.Pin77=PJ12
+Mcu.Pin78=PJ13
+Mcu.Pin79=PJ14
+Mcu.Pin8=PI13
+Mcu.Pin80=PJ15
+Mcu.Pin81=PK3
+Mcu.Pin82=PK4
+Mcu.Pin83=PK5
+Mcu.Pin84=PK6
+Mcu.Pin85=PK7
+Mcu.Pin86=PG15
+Mcu.Pin87=PE0
+Mcu.Pin88=PE1
+Mcu.Pin89=PI4
+Mcu.Pin9=PI14
+Mcu.Pin90=PI5
+Mcu.Pin91=PI6
+Mcu.Pin92=PI7
+Mcu.Pin93=VP_SYS_VS_tim1
+Mcu.Pin94=VP_STMicroelectronics.X-CUBE-AZRTOS-F4_VS_RTOSJjThreadX_6.1.7_1.0.0
+Mcu.PinsNb=95
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-AZRTOS-F4.1.0.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -133,6 +182,8 @@ PD1.Signal=FMC_D3_DA3
 PD10.Signal=FMC_D15_DA15
 PD12.Locked=true
 PD12.Signal=GPIO_Output
+PD13.Locked=true
+PD13.Signal=GPIO_Output
 PD14.Signal=FMC_D0_DA0
 PD15.Signal=FMC_D1_DA1
 PD8.Signal=FMC_D13_DA13
@@ -186,6 +237,23 @@ PH9.Signal=FMC_D17
 PI0.Signal=FMC_D24
 PI1.Signal=FMC_D25
 PI10.Signal=FMC_D31
+PI12.GPIOParameters=GPIO_Speed
+PI12.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PI12.Mode=RGB888
+PI12.Signal=LTDC_HSYNC
+PI13.GPIOParameters=GPIO_Speed
+PI13.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PI13.Mode=RGB888
+PI13.Signal=LTDC_VSYNC
+PI14.GPIOParameters=GPIO_Speed
+PI14.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PI14.Mode=RGB888
+PI14.Signal=LTDC_CLK
+PI15.GPIOParameters=GPIO_Speed
+PI15.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PI15.Locked=true
+PI15.Mode=RGB888
+PI15.Signal=LTDC_R0
 PI2.Signal=FMC_D26
 PI3.Signal=FMC_D27
 PI4.Signal=FMC_NBL2
@@ -193,6 +261,115 @@ PI5.Signal=FMC_NBL3
 PI6.Signal=FMC_D28
 PI7.Signal=FMC_D29
 PI9.Signal=FMC_D30
+PJ0.GPIOParameters=GPIO_Speed
+PJ0.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PJ0.Locked=true
+PJ0.Mode=RGB888
+PJ0.Signal=LTDC_R1
+PJ1.GPIOParameters=GPIO_Speed
+PJ1.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PJ1.Mode=RGB888
+PJ1.Signal=LTDC_R2
+PJ10.GPIOParameters=GPIO_Speed
+PJ10.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PJ10.Mode=RGB888
+PJ10.Signal=LTDC_G3
+PJ11.GPIOParameters=GPIO_Speed
+PJ11.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PJ11.Locked=true
+PJ11.Mode=RGB888
+PJ11.Signal=LTDC_G4
+PJ12.GPIOParameters=GPIO_Speed
+PJ12.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PJ12.Locked=true
+PJ12.Mode=RGB888
+PJ12.Signal=LTDC_B0
+PJ13.GPIOParameters=GPIO_Speed
+PJ13.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PJ13.Mode=RGB888
+PJ13.Signal=LTDC_B1
+PJ14.GPIOParameters=GPIO_Speed
+PJ14.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PJ14.Locked=true
+PJ14.Mode=RGB888
+PJ14.Signal=LTDC_B2
+PJ15.GPIOParameters=GPIO_Speed
+PJ15.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PJ15.Mode=RGB888
+PJ15.Signal=LTDC_B3
+PJ2.GPIOParameters=GPIO_Speed
+PJ2.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PJ2.Locked=true
+PJ2.Mode=RGB888
+PJ2.Signal=LTDC_R3
+PJ3.GPIOParameters=GPIO_Speed
+PJ3.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PJ3.Mode=RGB888
+PJ3.Signal=LTDC_R4
+PJ4.GPIOParameters=GPIO_Speed
+PJ4.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PJ4.Mode=RGB888
+PJ4.Signal=LTDC_R5
+PJ5.GPIOParameters=GPIO_Speed
+PJ5.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PJ5.Locked=true
+PJ5.Mode=RGB888
+PJ5.Signal=LTDC_R6
+PJ6.GPIOParameters=GPIO_Speed
+PJ6.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PJ6.Mode=RGB888
+PJ6.Signal=LTDC_R7
+PJ7.GPIOParameters=GPIO_Speed
+PJ7.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PJ7.Locked=true
+PJ7.Mode=RGB888
+PJ7.Signal=LTDC_G0
+PJ8.GPIOParameters=GPIO_Speed
+PJ8.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PJ8.Locked=true
+PJ8.Mode=RGB888
+PJ8.Signal=LTDC_G1
+PJ9.GPIOParameters=GPIO_Speed
+PJ9.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PJ9.Locked=true
+PJ9.Mode=RGB888
+PJ9.Signal=LTDC_G2
+PK0.GPIOParameters=GPIO_Speed
+PK0.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PK0.Locked=true
+PK0.Mode=RGB888
+PK0.Signal=LTDC_G5
+PK1.GPIOParameters=GPIO_Speed
+PK1.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PK1.Mode=RGB888
+PK1.Signal=LTDC_G6
+PK2.GPIOParameters=GPIO_Speed
+PK2.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PK2.Mode=RGB888
+PK2.Signal=LTDC_G7
+PK3.GPIOParameters=GPIO_Speed
+PK3.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PK3.Locked=true
+PK3.Mode=RGB888
+PK3.Signal=LTDC_B4
+PK4.GPIOParameters=GPIO_Speed
+PK4.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PK4.Locked=true
+PK4.Mode=RGB888
+PK4.Signal=LTDC_B5
+PK5.GPIOParameters=GPIO_Speed
+PK5.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PK5.Mode=RGB888
+PK5.Signal=LTDC_B6
+PK6.GPIOParameters=GPIO_Speed
+PK6.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PK6.Mode=RGB888
+PK6.Signal=LTDC_B7
+PK7.GPIOParameters=GPIO_Speed
+PK7.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PK7.Locked=true
+PK7.Mode=RGB888
+PK7.Signal=LTDC_DE
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -221,7 +398,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5.32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_FMC_Init-FMC-false-HAL-true,5-MX_LTDC_Init-LTDC-false-HAL-true
 RCC.48MHZClocksFreq_Value=90000000
 RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -238,27 +415,29 @@ RCC.HCLKFreq_Value=180000000
 RCC.HSE_VALUE=25000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=160000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LCDTFTFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SAI_AClocksFreq_Value,SAI_BClocksFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ
-RCC.LCDTFTFreq_Value=20416666.666666668
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LCDTFTFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLSAIN,PLLSAIR,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SAI_AClocksFreq_Value,SAI_BClocksFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ
+RCC.LCDTFTFreq_Value=10000000
 RCC.LSI_VALUE=32000
 RCC.MCO2PinFreq_Value=180000000
 RCC.PLLCLKFreq_Value=180000000
 RCC.PLLM=15
 RCC.PLLN=216
 RCC.PLLQCLKFreq_Value=90000000
+RCC.PLLSAIN=60
+RCC.PLLSAIR=5
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=12500000
-RCC.SAI_AClocksFreq_Value=20416666.666666668
-RCC.SAI_BClocksFreq_Value=20416666.666666668
+RCC.SAI_AClocksFreq_Value=25000000
+RCC.SAI_BClocksFreq_Value=25000000
 RCC.SYSCLKFreq_VALUE=180000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.VCOI2SOutputFreq_Value=320000000
 RCC.VCOInputFreq_Value=1666666.6666666667
 RCC.VCOOutputFreq_Value=360000000
-RCC.VCOSAIOutputFreq_Value=81666666.66666667
-RCC.VCOSAIOutputFreq_ValueQ=20416666.666666668
-RCC.VCOSAIOutputFreq_ValueR=40833333.333333336
+RCC.VCOSAIOutputFreq_Value=100000000
+RCC.VCOSAIOutputFreq_ValueQ=25000000
+RCC.VCOSAIOutputFreq_ValueR=20000000
 RCC.VcooutputI2S=160000000
 RCC.VcooutputI2SQ=160000000
 SH.FMC_A0.0=FMC_A0,12b-sda2
