--- a/AZRTOS_ThreadX.ioc
+++ b/AZRTOS_ThreadX.ioc
@@ -39,13 +39,14 @@ LTDC.VSync=10
 LTDC.WindowX1_L0=480
 LTDC.WindowY1_L0=272
 Mcu.Family=STM32F4
-Mcu.IP0=FMC
-Mcu.IP1=LTDC
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=USART1
-Mcu.IPNb=6
+Mcu.IP0=DMA2D
+Mcu.IP1=FMC
+Mcu.IP2=LTDC
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=USART1
+Mcu.IPNb=7
 Mcu.Name=STM32F429B(E-G-I)Tx
 Mcu.Package=LQFP208
 Mcu.Pin0=PC14/OSC32_IN
@@ -141,9 +142,10 @@ Mcu.Pin9=PI14
 Mcu.Pin90=PI5
 Mcu.Pin91=PI6
 Mcu.Pin92=PI7
-Mcu.Pin93=VP_SYS_VS_tim1
-Mcu.Pin94=VP_STMicroelectronics.X-CUBE-AZRTOS-F4_VS_RTOSJjThreadX_6.1.7_1.0.0
-Mcu.PinsNb=95
+Mcu.Pin93=VP_DMA2D_VS_DMA2D
+Mcu.Pin94=VP_SYS_VS_tim1
+Mcu.Pin95=VP_STMicroelectronics.X-CUBE-AZRTOS-F4_VS_RTOSJjThreadX_6.1.7_1.0.0
+Mcu.PinsNb=96
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-AZRTOS-F4.1.0.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -557,6 +559,8 @@ STMicroelectronics.X-CUBE-AZRTOS-F4.1.0.0_SwParameter=ThreadXCcRTOSJjThreadXJjCo
 USART1.IPParameters=VirtualMode,OverSampling
 USART1.OverSampling=UART_OVERSAMPLING_8
 USART1.VirtualMode=VM_ASYNC
+VP_DMA2D_VS_DMA2D.Mode=DMA2D_Activate
+VP_DMA2D_VS_DMA2D.Signal=DMA2D_VS_DMA2D
 VP_STMicroelectronics.X-CUBE-AZRTOS-F4_VS_RTOSJjThreadX_6.1.7_1.0.0.Mode=RTOSJjThreadX
 VP_STMicroelectronics.X-CUBE-AZRTOS-F4_VS_RTOSJjThreadX_6.1.7_1.0.0.Signal=STMicroelectronics.X-CUBE-AZRTOS-F4_VS_RTOSJjThreadX_6.1.7_1.0.0
 VP_SYS_VS_tim1.Mode=TIM1
